[package]
name = "ft_sfxdx"
version = "0.1.0"
authors = ["theonekeyg <theonekeyg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
# cosmwasm-std = "0.15.0"
# cosmwasm-schema = "0.15.0"
# cosmwasm-storage = "0.15.0"
serde = { version = "1.0.126", features = ["derive"] }
schemars = "0.7"
